--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: pattern-trader-pro
     env: python
+    runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn web_dashboard:app --bind 0.0.0.0:$PORT
+    startCommand: gunicorn web_dashboard_unified:app --bind 0.0.0.0:$PORT --timeout 120 --workers 1 --threads 4
     plan: starter
     healthCheckPath: /
