Force Python 3.11 for pandas compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: pattern-trader-pro
     env: python
     runtime: python
+    pythonVersion: "3.11"
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn web_dashboard_unified:app --bind 0.0.0.0:$PORT --timeout 120 --workers 1 --threads 4
     plan: starter
