--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,31 @@
+databases:
+  - name: pattern-trader-db
+    databaseName: pattern_trader
+    user: pattern_trader
+    plan: starter
+
 services:
   - type: web
-    name: pattern-trader-pro
+    name: pattern-trader-pro-web
     env: python
-    runtime: python
-    pythonVersion: "3.11"
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn web_dashboard_unified:app --bind 0.0.0.0:$PORT --timeout 120 --workers 1 --threads 4
+    startCommand: gunicorn web_dashboard_live:app --bind 0.0.0.0:$PORT --timeout 120
     plan: starter
     healthCheckPath: /
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: pattern-trader-db
+          property: connectionString
+
+  - type: worker
+    name: pattern-trader-pro-scanner
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python auto_scanner_bot.py
+    plan: starter
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: pattern-trader-db
+          property: connectionString
